@@ -27,6 +27,7 @@ TinkerPop 3.1.4 (NOT OFFICIALLY RELEASED YET)
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
 * Fixed a potential leak of a `ReferenceCounted` resource in Gremlin Server.
+* Fixed bug in `TailGlobalStep` where excess bulk was not accounted for correctly.
 
 [[release-3-1-3]]
 TinkerPop 3.1.3 (Release Date: July 18, 2016)
